Added dependencies for SerenityBDD